--- a/Backend-Stacks-Training/worker/Dockerfile
+++ b/Backend-Stacks-Training/worker/Dockerfile
@@ -1,20 +1,13 @@
-# Base image
-FROM node:18
+FROM node:latest
 
-# Create app directory
-WORKDIR /usr/src/app
+WORKDIR /app
 
-# A wildcard is used to ensure both package.json AND package-lock.json are copied
 COPY package*.json ./
 
-# Install app dependencies
 RUN npm install
 
-# Bundle app source
 COPY . .
 
-# Creates a "dist" folder with the production build
-RUN npm run build
+EXPOSE 5001
 
-# Start the server using the production build
-CMD [ "node", "dist/main.js" ]
+CMD [ "npm", "run", "start:prod" ]
